# HGCAL-MAC-QA-UI

./: README.md  README.rst  setup.cfg
ntu_daq_gui/: config.json  config.py  config_template.json  executor.py  gui.py  hexacontroller.py  main.py  procedure.py  runcontrol.py
