[bumpversion]
current_version = 0.0.1
commit = true
tag = true

[bumpversion:file:signal_tools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = ntu-daq-gui
version = attr: ntu_daq_gui.__version__
author = Alexander Becker
author_email = nabla.becker@mailbox.org
description = GUI for automating parts of the data acquisition for MAC testing of HGCAL
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = signals, science, math
python_requires = >=3.6
license = GPL3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
include_package_data = True
packages = find:
install_requires =
  numpy
  matplotlib
  click
  pyyaml

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    hepa.tests*

[options.entry_points]
console_scripts =
    signal-io = signal_tools.cli:file_io
    signal-transform = signal_tools.cli:apply_transformation

